deployment.yml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: translate
  labels:
    name: translate
---

# kubectl create secret generic nnsecret --from-literal=username=dead_man --from-literal=password='***' --namespace translate

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: translate
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: docker.dev.ask-glonass.ru/sci_translator:latest
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  namespace: translate
  name: web

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: web
  type: LoadBalancer

---
# kubectl delete ingressroutes.traefik.containo.us web --namespace translate
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: translate
  name: web
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`translate.ml.ask-glonass.ru`)
    kind: Rule
    services:
    - name: web
      port: 80
  tls:
    certResolver: default
